# flusso

./: .gitignore  <Help>  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-build-and-push.yml
api-gateway/: Cargo.toml  Dockerfile
api-gateway/backend/: Cargo.toml  Dockerfile
api-gateway/backend-api-gateway/: Cargo.toml  Dockerfile
api-gateway/backend-api-gateway/src/: main.rs
api-gateway/backend-api-gateway/src/config/: mod.rs  routes.rs  settings.rs
api-gateway/backend-api-gateway/src/controllers/: gateway_controller.rs  security.rs
api-gateway/backend-api-gateway/src/handlers/: auth.rs  metrics.rs  mod.rs  proxy.rs  services.rs
api-gateway/backend-api-gateway/src/middleware/: auth.rs  logging.rs  metrics.rs  mod.rs
api-gateway/backend-api-gateway/src/models/: kubernetes.rs  mod.rs  route.rs
api-gateway/backend-api-gateway/src/services/: discovery.rs  load_balancer.rs  mod.rs
api-gateway/backend/src/: lib.rs  main.rs
api-gateway/backend/src/backends/: handlers.rs  mod.rs  routes.rs
api-gateway/backend/src/gateway/: gateway.rs  handlers.rs  mod.rs  models.rs  routes.rs
api-gateway/backend/src/gui/: gui_server.rs  mod.rs
api-gateway/backend/src/observability/: handlers.rs  mod.rs  routes.rs
api-gateway/backend/src/plugins/: mod.rs  routes.rs
api-gateway/backend/src/rest/: handlers.rs  mod.rs  routes.rs
api-gateway/backend/src/security/: handlers.rs  mod.rs  routes.rs
api-gateway/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
api-gateway/frontend-api-gateway/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
api-gateway/frontend-api-gateway/src/: App.tsx  index.css  main.tsx
api-gateway/frontend-api-gateway/src/config/: constants.ts  env.ts
api-gateway/frontend-api-gateway/src/types/: auth.ts  routes.ts  services.ts
api-gateway/frontend/src/: App.css  App.tsx  apiClient.ts  main.tsx
api-gateway/frontend/src/components/: Backends.tsx  Dashboard.tsx  Gateways.tsx  Observability.tsx  Security.tsx
api-gateway/src/: lib.rs  main.rs  script.sh
api-gateway/src/gateway/: mod.rs
api-gateway/src/gateway/routes/: grpc_route.rs  http_route.rs  mod.rs
api-gateway/src/gui/: gui_server.rs  mod.rs
api-gateway/src/gui/components/: dashboard.rs  gateways.rs  metrics.rs  mod.rs  routes.rs  security.rs
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  ingress.yaml  rbac.yaml  service.yaml
docs/: architecture.md  diagram.md  flusso_summary.md  project_structure.md
helm/api-gateway/: Chart.yaml  values.yaml
helm/api-gateway/backend/: values.yaml
helm/api-gateway/backend/templates/: service.yaml
helm/api-gateway/frontend/: Chart.yaml  values.yaml
helm/api-gateway/frontend/templates/: _helpers.tpl  deployment.yaml  service.yaml
helm/api-gateway/templates/: _helpers.tpl  deployment.yaml  flusso-api-gateway-crd.yaml  rbac.yaml  service.yaml
helm/ingress-controller/: values.yaml
helm/ingress-controller/templates/: _helpers.tpl  deployment.yaml
ingress-controller/: Cargo.toml  Dockerfile
ingress-controller/src/: lib.rs  main.rs
ingress-controller/src/config/: settings.rs  tls.rs
ingress-controller/src/gui/: gui_server.rs  mod.rs
ingress-controller/src/gui/components/: dashboard.rs  ingresses.rs  mod.rs  routes.rs  security.rs
ingress-controller/src/gui/static/: index.html
ingress-controller/src/ingress_controller/: ingress_processor.rs
ingress-controller/src/metrics/: mod.rs
ingress-controller/src/proxy/: cache.rs
ingress-controller/src/tls/: acme.rs  mod.rs
ingress-controller/src/utils/: helpers.rs  mod.rs
src/: lib.rs  main.rs
src/config/: mod.rs  settings.rs  tls.rs
src/gateway/: gateway_class.rs
src/gateway/routes/: tls_route.rs
src/gui/: gui_server.rs  mod.rs  static_files.rs
src/gui/static/: app.js  index.html  styles.css
src/health_check/: backend_checker.rs  mod.rs
src/ingress_controller/: event_listener.rs  ingress_processor.rs  mod.rs
src/metrics/: mod.rs  prometheus.rs
src/proxy/: cache.rs  http.rs  load_balancer.rs  mod.rs  router.rs
src/tls/: acme.rs  certificate_manager.rs  mod.rs  mod.rs~
src/utils/: logger.rs
tests/: ingress_controller_tests.rs  integration_test.rs  proxy_tests.rs
(+68 files in other folders)
