[package]
name = "flusso"
version = "0.0.1"
edition = "2021"

# Descripción general de tu proyecto
description = "Flusso - Un Ingress Controller escrito en Rust"
authors = ["Dionisio <tuemail@ejemplo.com>"]
license = "MIT"
repository = "https://github.com/dioni-dev/flusso"

[dependencies]
# Dependencias de Actix para el servidor web y web GUI
actix-web = "4.9.0"
actix-rt = "2.10.0"
actix-files = "0.6.6"
actix-service = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
dotenv = "0.15"
config = "0.13"

# Dependencias para el proxy y manejo de HTTP con TLS en Reqwest
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-rustls = "0.26"  # o una versión compatible
futures-util = "0.3.31"

# Añadir anyhow
anyhow = "1.0"

# Dependencias para TLS y certificados
rustls = "0.23.16"
rustls-pemfile = "0.3.0"

# Dependencias para métricas y Prometheus



# Dependencias para logging
log = "0.4.22"
env_logger = "0.11.5"

# Dependencias para pruebas
[dev-dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.41.0", features = ["full"] }

