[package]
name = "flusso"
version = "0.0.1"
edition = "2021"

# General project description
description = "Flusso - An Ingress Controller written in Rust"
authors = ["Dionisio <dionisio.pozo@outlook.com>"]
license = "MIT"
repository = "https://github.com/dioni-dev/flusso"

[[bin]]
name = "flusso"
path = "src/main.rs"

[dependencies]
# Actix dependencies for web server and web GUI
actix-web = "4.9.0"
actix-rt = "2.10.0"
actix-files = "0.6.6"
actix-service = "2.0.2"

# Serialization dependencies
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"

# Environment and configuration management
dotenv = "0.15.0"
config = "0.14.1"


yew-router = "0.18.0"
yew = "0.21.0"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"

# Kubernetes dependencies
kube = { version = "0.96.0", features = ["runtime"] }
kube-runtime = "0.96.0"
k8s-openapi = { version = "0.23.0", features = ["v1_28"] }

# Network handling and HTTP with TLS via Reqwest
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-rustls = "0.26.0"  # or compatible version
futures-util = "0.3.31"
bytes = "1.8.0"

# General utilities
anyhow = "1.0.93"

# TLS and certificate handling
rustls = { version = "0.23.16", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2.0"

# Logging dependencies
log = "0.4.22"
env_logger = "0.11.5"

# Testing dependencies
[dev-dependencies]
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.41.1", features = ["full"] }

# Build profile configuration for Release optimization
[profile.release]
lto = true  # Enable full LTO for maximum optimization in the Release build
